# aima-framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.ja.md  README.md  USAGE_FOR_AI.md  vcpkg.json
arimu-framework/: README.md
arimu-framework/arimu/: Commands.hpp  Select.hpp
hd2d/: CMakeLists.txt
hd2d/assets/: gltf_loader.cpp  gltf_loader.h  sprite_sheet.cpp  sprite_sheet.h
hd2d/core/: log_compat.h  math_compat.h
hd2d/game_core/: clip_rules.h  compass_math.h  components_core.h  dof_math.h  fx.h  fx_defs.h  paper_anim.h
hd2d/game_core/plugins/: fx_plugin.cpp  fx_plugin.h  input_mapper_plugin.cpp  input_mapper_plugin.h  physics_plugin.cpp  physics_plugin.h  render_plugin.cpp  render_plugin.h  sound_plugin.cpp  sound_plugin.h  sprite_plugin.cpp  sprite_plugin.h  ui_plugin.cpp  ui_plugin.h
hd2d/host/: stb_impl.cpp
hd2d/renderer/: camera.cpp  camera.h  device.h  forward_pass.cpp  forward_pass.h  frame_renderer.h  gpu_resources.cpp  gpu_resources.h  post_chain.cpp  post_chain.h  render_constants.h  renderer_impl.cpp  renderer_impl.h  rhi.h  scene_targets.cpp  scene_targets.h  shadow_pass.cpp  shadow_pass.h
hd2d/renderer/dx12/: device.cpp  device.h
hd2d/renderer/sdlgpu/: d3d12_stubs.h  device.cpp  device.h  geometry_pass.cpp  geometry_pass.h  live_scene.h  post_pass.cpp  post_pass.h  stub_passes.cpp  triangle_pass.cpp  triangle_pass.h
hd2d/shaders/: fullscreen.hlsl  post.hlsl  shadow.hlsl  standard.hlsl
hd2d/ui/: imgui_layer.cpp  imgui_layer.h  ui_components.h
include/aima/: aima.h  host.h  renderer.h
src/assets/: res_path.h
src/core/: game_api_macro.h  host.cpp  hot_reload.cpp  hot_reload.h  log.cpp  log.h  math.h
src/platform/: audio.cpp  audio.h  input.h  window.cpp  window.h
tools/: issue-token.bat  issue-token.command  issue-token.sh  issue_token.py  setup-mac.command  setup-mac.sh  setup-windows.ps1  setup.bat
tools/template/: CMakeLists.txt  CMakePresets.json  aima.project.json  vcpkg.json
tools/template/.run/: aima_game.run.xml
tools/template/game/: game.cpp  main.cpp  renderer.cpp  renderer.h
